syntax = "proto3";

package io.harness.observer;

option java_multiple_files = true;
option go_package = "952_remote_observers";

service RemoteObserver {
  rpc observer(Informant) returns (Response);
}

message Informant {
  string method_name = 1;
  oneof informant {
    Informant0 informant0 = 2;
    Informant1 informant1 = 3;
    Informant2 informant2 = 4;
    Informant3 informant3 = 5;
    Informant4 informant4 = 6;
  }
}

message Informant0 {}

message Informant1 {
  bytes param1 = 1;
}

message Informant2 {
  bytes param1 = 1;
  bytes param2 = 2;
}

message Informant3 {
  bytes param1 = 1;
  bytes param2 = 2;
  bytes param3 = 3;
}

message Informant4 {
  bytes param1 = 1;
  bytes param2 = 2;
  bytes param3 = 3;
  bytes param4 = 4;
}

message Response {}